gccida/g3/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2156:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)insn[2] != pat ) 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2174:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v24) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2174:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v24) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2192:38: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + *( ( unsigned __int8 *)*v19 + 2)) - 5) <= 1 ) 
                                     ^~~~~~~~~~~~
                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2211:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( unsigned __int16 *)pat[1]; 
                           ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2284:17: error: expected identifier or '('
 struct reg_set = regstack->reg_set; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2287:8: error: expected expression
v96 =  struct reg_set | ( 1LL << ( ( unsigned __int8)v92 + ( unsigned __int8)v28)); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2360:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + ( unsigned __int8)v91) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2360:50: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + ( unsigned __int8)v91) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2419:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v89.rtwint = ( __int64)regno_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2423:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v90) & 0xFFFFFFFB) != 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2423:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v90) & 0xFFFFFFFB) != 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2439:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v35) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2439:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v35) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2469:39: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v92 = ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v91) - 5) <= 1; 
                                      ^~~~~~~~~~~~
                                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2721:26: error: assigning to '__m128' (vector of 4 'float' values) from incompatible type 'int'
*( __m128 *)&src_note[1] = _mm_loadh_ps( ( const double *)&src2_note); 
                         ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2815:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v77.rtwint = ( __int64)insn[3].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2923:12: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( *( &mode_class_0 + v86) & 0xFFFFFFFB) == 2 ) 
           ^~~~~~~~~~~~
           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/reg-stack.c:2923:32: error: invalid operands to binary expression ('const enum mode_class [59]' and 'unsigned int')
if ( ( *( &mode_class_0 + v86) & 0xFFFFFFFB) == 2 ) 
       ~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
